# Parallel-Programming-Projects

./: .gitignore  CMakeLists.txt  Cluster.cpp  Cluster.h  KMeans.cpp  KMeans.h  KMeansSeq.cpp  KMeansSeq.h  KMeansSoA.cpp  KMeansSoA.h  LevenshteinDistance.cpp  LevenshteinDistance.h  PointsSoA.cpp  PointsSoA.h  README.md  checkVocabularyPar.cpp  checkVocabularyPar.h  checkVocabularySeq.cpp  checkVocabularySeq.h  generateData.cpp  generateData.h  plotKmeans.py  testKMeans.cpp  testKMeansSoA.cpp  testLevenshteinDistance.cpp
clusters/: 10mil2d.csv  10mil4d.csv  10mil8d.csv  1mil2d.csv  1mil4d.csv  1mil8d.csv  3-clusters.csv  4-clusters.csv  basic1.csv  basic1_4-clusters.csv  basic1_train.csv  basic5.csv  basic5_3-clusters.csv  basic5_train.csv
results/: KmeansSoA_results.txt  Kmeans_results.txt  Levenshtein_Distance_results.txt
vocabularies/: Danish.txt  English.txt  French.txt  German.txt  Italian.txt  Polish.txt  Portuguese.txt  Spanish.txt  Swedish.txt  all_Languages.txt
